K8S/task-5/resiliency/circuit-breaker.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule

metadata:
  name: transaction-circuit-breaker
  namespace: finbank-new

spec:
  host: auth-service.finbank-new.svc.cluster.local

  trafficPolicy:

    connectionPool:

      tcp:
        maxConnections: 50

      http:
        http1MaxPendingRequests: 20
        maxRequestsPerConnection: 5

    outlierDetection:

      consecutive5xxErrors: 5
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
